welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:32: error: expected class or object definition
def growFlowers() {
^FlowerCase:34: error: Unmatched closing brace '}' ignored here
	} 
        ^